k8s/prod/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minte
  labels:
    app: minte
spec:
  revisionHistoryLimit: 5
  replicas: 1
  selector:
    matchLabels:
      app: minte
  template:
    metadata:
      labels:
        app: minte
    spec:
      imagePullSecrets:
        - name: "gitlab.com"
      containers:
      - name: minte
        image: registry.gitlab.com/mintetv/minte:latest
        imagePullPolicy: Always
        name: minte-deployment
        resources: {}
        ports:
          - containerPort: 8001
