k8s/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: minte-service
spec:
  ports:
  - name: web
    port: 8001
    protocol: TCP
  selector:
    app: minte
