k8s/prod/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minte-ingress
spec:
  rules:
  - host: $DOMAIN
    http:
      paths:
      - path: "/"
        backend:
          serviceName: minte
          servicePort: web
